# live-camera-learning

./: .gitignore  EFFICIENCY_REPORT.md  README_API.md  api_server.py  download_yolo.py  edaxshifu.py  gemini_vision.py  github_issue_swift_port.md  knn_online.py  main.py  pyproject.toml  readme.md  requirements-distributed.txt  requirements.txt  requirements_api.txt  rstp_test.py  run.sh  run_with_annotation.sh  swift_port_analysis.md  test_annotator_switching.py  test_enhanced_annotation.py  test_live_rtsp.py  test_real_image.py  unified_interface.py  unified_interface_with_all_selectors.py
captures/: capture_20250806_135531_cup_metadata.txt  capture_20250806_135539_handbag_metadata.txt  capture_20250806_135544_umbrella_metadata.txt  capture_20250806_135546_cellphone_metadata.txt  capture_20250806_135550_bottle_metadata.txt  capture_20250806_135552_cup_bottle_metadata.txt  capture_20250806_135555_cup_metadata.txt  capture_20250806_135603_cup_metadata.txt  capture_20250806_140159_cellphone_metadata.txt  capture_20250806_140201_cellphone_metadata.txt  capture_20250806_140205_cellphone_metadata.txt  capture_20250806_140219_cellphone_metadata.txt  capture_20250806_140228_cellphone_metadata.txt  capture_20250806_140232_cellphone_metadata.txt  capture_20250806_140234_cellphone_metadata.txt
deprecated/: annotate.py  preview_stream copy.py
examples/: hand_detection_example.py  hand_stream_viewer.py
models/: knn_classifier.pkl  online_test.pkl
python/: api_server.py  download_yolo.py  main.py  readme.md  run.sh  run_rtsp.py  run_with_annotation.sh  unified_interface.py  (+1 more)
(+271 files in other folders)
