[project]
name = "edaxshifu"
version = "0.1.0"
description = "Intelligent Edge AI Camera System"
readme = "readme.md"
requires-python = "==3.11.*"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.21.0,<2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "scikit-learn>=1.3.0",
    "ultralytics>=8.0.0",
    "Pillow>=10.0.0",
    "onnxruntime>=1.16.0",
    "websockets>=12.0",
    "edge-tts>=6.1.0",
    "scipy>=1.10.0",
    "mediapipe>=0.10.0",
    "gradio>=4.0.0",
    "google-generativeai>=0.8.5",
]
